tests/ui/structs-enums/struct-rec/issue-84611.stderr
error[E0072]: recursive type `Foo` has infinite size
  --> $DIR/issue-84611.rs:1:1
   |
LL | struct Foo<T> {
   | ^^^^^^^^^^^^^
LL |
LL |     x: Foo<[T; 1]>,
   |        ----------- recursive without indirection
   |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
   |
LL |     x: Box<Foo<[T; 1]>>,
   |        ++++           +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0072`.
