tests/ui/structs-enums/struct-rec/issue-84611.rs
struct Foo<T> {
//~^ ERROR recursive type `Foo` has infinite size
    x: Foo<[T; 1]>,
    y: T,
}

struct Bar {
    x: Foo<Bar>,
}

fn main() {}
